# conda-bonjour

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.recipe/: build.sh  conda_build_config.yaml  meta.yaml
conda-bonjour/: meta.yaml
conda_bonjour/: __init__.py  common.py
